--- a/css/main.css
+++ b/css/main.css
@@ -199,13 +199,13 @@ ul.listing li.listing-item a {
 /* Page Content styles */
 /* ----------------------------------------------------------*/
 
-.page-content {
+.page-content, .aadl-book  {
   padding: 30px 0;
   text-align: justify;
   background-color: #fff;
 }
 
-.page-content .post-header
+.page-content .post-header, .aadl-book .post-header
 {
    text-align: right;
    font-size: 200%;
@@ -262,18 +262,45 @@ ul.listing li.listing-item a {
 .page-content h1,
 .page-content h2,
 .page-content h3,
+.aadl-book h3,
 .post-content h1,
 .post-content h2,
 .post-content h3,
 .post-content h4,
 .post-content h5,
-.post-content h6 {
+.post-content h6
+{
   line-height: 1;
   font-weight: 300;
   margin: 40px 0 20px;
 }
 
 
+.aadl-book h1
+{
+  line-height: 1;
+  font-weight: 300;
+  margin: 20px 0 10px;
+}
+
+.aadl-book h2
+{
+  line-height: 0.5;
+  font-weight: 300;
+  margin: 20px 0 10px;
+}
+
+.aadl-book h1
+{
+   font-size: 2em;
+   font-style: bold;
+}
+
+.aadl-book h2
+{
+   font-size: 1.5em;
+   font-style: bold;
+}
 
 .page-content h1
 {
@@ -288,7 +315,7 @@ ul.listing li.listing-item a {
 }
 
 
-.page-content h3
+.page-content h3, .aadl-book h3
 {
    font-size: 110%;
    font-style: bold;
